# fair2-climate

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
modules/fair2/climate/: fill_from.py
src/fair2_climate/: __init__.py  cli.py  fair2_climate_project.py  fill_from_rcmip.py
