[project]
name = "fair2-climate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Emma Marshall", email = "emarshall@rhg.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "fair==2.1.4",
    "netcdf4>=1.7.4",
]

[project.scripts]
fair2-climate = "fair2_climate:cli.main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
